consolidated redundant CSS categories

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -11,11 +11,32 @@ body {
 }
 
 .header {
-    padding: 20px;
+    padding: .5em;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 2.5em;
+    height: 10rem;
+    width: 100%;
+    line-height: 60px;
+    position: fixed;
+    z-index: 1;
+    flex: 1 1 300px;
 }
+
+/* Styles unordered lists inside the nav elements */
+nav ul {
+    padding-top: 20px;
+    margin-right: 20px;
+    display: flex;
+    gap: 20px;
+    list-style-type: none;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 24px;
+} 
 
 /* formats header 1 to 48px font size and inline block display type */
 .header h1 {
@@ -25,24 +46,6 @@ body {
 
 .header h1 .seo {
     color: #d9dcd6;
-}
-
-/* next three class entries give correct positioning and formatting to the navigation bar */
-.header nav {
-    padding-top: 15px;
-    margin-right: 20px;
-    float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
-}
-
-.header nav ul {
-    list-style-type: none;
-}
-
-.header nav ul li {
-    display: inline-block;
-    margin-left: 25px
 }
 
 /* defines the color and text decoration of 'a' tags */
@@ -56,8 +59,9 @@ p {
     font-size: 16px;
 }
 
+/* defines the hero ID used to format the background image. Changed from class to ID */
 #hero {
-    height: 800px;
+    height: 100%;
     width: 100%;
     margin-bottom: 25px;
     background-image: url("../images/digital-marketing-meeting.jpg");
@@ -92,55 +96,22 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit-category {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefit-category h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefit-category img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.search-engine-optimization {
+.seo-orm-smm {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -149,47 +120,11 @@ p {
     color: #ffffff;
 }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
+.seo-orm-smm img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
+.seo-orm-smm h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
