--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ body {
     height: 10rem;
     width: 100%;
     line-height: 60px;
-    position: fixed;
+    position: relative;
     z-index: 1;
     flex: 1 1 300px;
 }
@@ -62,7 +62,7 @@ p {
 
 /* defines the hero ID used to format the background image. Changed from class to ID */
 #hero {
-    height: 100%;
+    height: 75%;
     width: 100%;
     margin-bottom: 25px;
     background-image: url("../images/digital-marketing-meeting.jpg");
@@ -86,7 +86,7 @@ p {
     margin-left: 20px;
 }
 
-
+/* sets formatting for the benefits aside element. 3 redundant classes were consolidated into this class */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -98,6 +98,7 @@ p {
     background-color: #2589bd;
 }
 
+/* subclass formatting for the benefits class is defined here */
 .benefit-category {
     margin-bottom: 32px;
     color: #ffffff;
@@ -113,6 +114,8 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
+
+/* Three redundant classes were consolidated into this class. Class sets formatting for the services offered section*/
 .seo-orm-smm {
     margin-bottom: 20px;
     padding: 50px;
@@ -122,6 +125,7 @@ p {
     color: #ffffff;
 }
 
+/* class functions were defined for the seo-orm-smm class below. Creates additional formatting for different elements */
 .seo-orm-smm img {
     max-height: 200px;
 }
